Fix preview title overflow

--- a/stylesheets/panel.css
+++ b/stylesheets/panel.css
@@ -33,6 +33,8 @@ hr{
 	flex-direction: row;
 	flex-wrap: nowrap;
 	justify-content: flex-start;
+	min-width: 0px;
+	overflow: hidden;
 }
 
 .delete_button{
@@ -43,7 +45,7 @@ hr{
 .preview_title{
 	/*display: inline-block;*/
 	flex: auto;
-	min-width: 0px;
+	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 }
